Bug 475317 - Icon of OSD is initially incorrect and then corrects itself after a few milliseconds
Summary: Icon of OSD is initially incorrect and then corrects itself after a few milli...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-10-07 13:07 UTC by Patrick Silva
Modified: 2023-10-30 19:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (784.93 KB, video/webm)
2023-10-07 13:07 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-10-07 13:07:51 UTC
Created attachment 162142 [details]
screen recording

STEPS TO REPRODUCE
1. activate the night color feature in Night Color KCM
2. repeatedly deactivate/reactivate the night color by clicking on the Night Color applet in the system tray
3. 

OBSERVED RESULT
the icon of the OSD that appears after each click on Night Color icon is initially incorrect and then corrects itself after a few milliseconds. Please watch the attached screen recording.

EXPECTED RESULT
correct icon immediately when the OSD appears

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Can also reproduce with sound OSD when muting/unmuting the sound. But in this case the bug is less noticeable.
Comment 1 Nate Graham 2023-10-12 21:05:13 UTC
Can confirm. Seems like it could be related to whatever's causing Bug 475143.

Can you reproduce this in Plasma 5 too, or only 6?
Comment 2 Patrick Silva 2023-10-12 21:14:48 UTC
Cannot reproduce on Plasma 5.
Comment 3 Nate Graham 2023-10-12 21:25:32 UTC
Thanks for checking!
Comment 4 Nate Graham 2023-10-14 03:44:38 UTC
I suspect this may be an issue caused by the port to Kirigami.Icon. My theory is that when the OSD re-appears with a different icon, the existing icon instance animates between the old and new icons instead if just always using the new icon instantly.
Comment 5 Kai Uwe Broulik 2023-10-30 19:36:30 UTC
Git commit 4e83a29fd4318ace22899c5f85405e1d43bb6696 by Kai Uwe Broulik.
Committed on 30/10/2023 at 20:31.
Pushed by broulik into branch 'master'.

Icon: Block next animation also on window visibility change

M  +14   -2    src/icon.cpp
M  +3    -0    src/icon.h

https://invent.kde.org/frameworks/kirigami/-/commit/4e83a29fd4318ace22899c5f85405e1d43bb6696