Icon: Block next animation also on window visibility change

BUG: 475317